k8s/postgresql.yaml
apiVersion: template.openshift.io/v1
kind: Template
labels:
  template: postgresql
  application: ${APPLICATION_NAME}
message: This is a template to provision postgresql.
metadata:
  name: postgresql
  annotations:
    description: "postgresql template"
objects:
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    name: postgresql-10
  spec:
    lookupPolicy:
      local: true
    tags:
      - annotations:
          description: Provides a PostgreSQL 10 database on RHEL 8. For more information about using this database image, including OpenShift considerations, see https://github.com/sclorg/postgresql-container/blob/master/README.md.
        from:
          kind: DockerImage
          name: "registry.redhat.io/rhel8/postgresql-10:1-232"
        name: 10-el8
        referencePolicy:
          type: Local
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: ${APPLICATION_NAME}
  data:
    postgresql-max-prepared-transactions: ''
    postgresql-max-connections: ''
    postgresql-shared-buffers: ''
- apiVersion: v1
  kind: Secret
  metadata:
    name: ${APPLICATION_NAME}
  data:
    postgresql-database: ${DATABASE_NAME}
    postgresql-user: ${DATABASE_USER}
    postgresql-password: ${DATABASE_PASSWORD}
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: ${APPLICATION_NAME}-pvc
  spec:
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: "1Gi"
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: ${APPLICATION_NAME}
    labels:
      app: ${APPLICATION_NAME}
  spec:
    replicas: 1
    selector:
      matchLabels:
        deployment: ${APPLICATION_NAME}
    template:
      metadata:
        labels:
          deployment: ${APPLICATION_NAME}
        annotations:
          alpha.image.policy.openshift.io/resolve-names: '*'
      spec:
        volumes:
          - name: pgdata
            persistentVolumeClaim:
              claimName: ${APPLICATION_NAME}-pvc
        containers:
          - name: postgresql
            securityContext:
              runAsNonRoot: true
              seccompProfile:
                type: RuntimeDefault
              allowPrivilegeEscalation: false
              capabilities:
                drop:
                - ALL
            image: postgresql-10:10-el8
            ports:
              - containerPort: 5432
                protocol: TCP
            readinessProbe:
              timeoutSeconds: 10
              initialDelaySeconds: 90
              successThreshold: 1
              failureThreshold: 3
              exec:
                command:
                - "/bin/sh"
                - "-i"
                - "-c"
                - psql -h 127.0.0.1 -U $PGUSER -q -d $PGUSER -c 'SELECT 1'
            livenessProbe:
              timeoutSeconds: 10
              initialDelaySeconds: 90
              successThreshold: 1
              failureThreshold: 3
              tcpSocket:
                port: 5432
            volumeMounts:
              - mountPath: /var/lib/pgsql/data
                name: pgdata
            resources: {}
            imagePullPolicy: IfNotPresent
        restartPolicy: Always
        terminationGracePeriodSeconds: 60
        dnsPolicy: ClusterFirst
        securityContext: {}
        schedulerName: default-scheduler
    strategy:
      type: Recreate
    revisionHistoryLimit: 10
    progressDeadlineSeconds: 600
- apiVersion: v1
  kind: Service
  metadata:
    name: ${APPLICATION_NAME}
    labels:
      app: ${APPLICATION_NAME}
  spec:
    ports:
      - name: 5432-tcp
        protocol: TCP
        port: 5432
        targetPort: 5432
    selector:
      deployment: ${APPLICATION_NAME}
    type: ClusterIP
    sessionAffinity: None
parameters:
- displayName: Application Name
  description: The name for the application.
  name: APPLICATION_NAME
  value: postgresql
  required: true
- displayName: Database Name
  description: "Database Name"
  name: DATABASE_NAME
  value: 'dXNlcg=='
  required: true
- displayName: Database User
  description: "Database User"
  name: DATABASE_USER
  value: 'dXNlcg=='
  required: true
- displayName: Database Password
  description: "Database Password"
  name: DATABASE_PASSWORD
  value: 'dXNlcg=='
  required: true
