k8s/gitea.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitea
    template: gitea
    app.kubernetes.io/name: gitea
    app.kubernetes.io/part-of: gitea
  name: gitea
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: gitea
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - image: docker.io/gitea/gitea:1.20-rootless
        imagePullPolicy: IfNotPresent
        name: gitea
        ports:
        - containerPort: 8081
          protocol: TCP
        resources:
          limits:
            cpu: 1000m
            memory: 4Gi
          requests:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - mountPath: /var/lib/gitea
          name: gitea-data
        - mountPath: /etc/gitea
          name: gitea-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: gitea-data
        persistentVolumeClaim:
          claimName: gitea-data
      - name: gitea-config
        persistentVolumeClaim:
          claimName: gitea-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitea
    template: gitea
  name: gitea
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  - name: 2222-tcp
    port: 2222
    protocol: TCP
    targetPort: 2222
  selector:
    app: gitea
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: gitea
    template: gitea
  name: gitea
spec:
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: gitea
    weight: 100
  wildcardPolicy: None
